# textwavedeck

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  WaveDeck.spec  main.py  pyproject.toml  requirements.txt  启动手势控制PPT.cmd  第一阶段执行方案.md  第二阶段执行方案.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
app/: commands.py  logging_config.py  main_window.py  runtime_paths.py  theme.py  workers.py
docs/: architecture.md  gesture-controls.md  gesture-controls.zh-CN.md  release-v0.1.0.md  security-and-privacy.md  windows-package.md
examples/: presentation-modes.md  quick-start.md
gesture/: __init__.py  camera_worker.py  controller.py  diagnostics.py  hand_landmarks.py  settings.py
models/: slide_project.py
ppt/: __init__.py  importer.py  powerpoint_exporter.py  project_store.py
scripts/: build_release.ps1
tests/: integration_powerpoint_smoke.py  test_camera_overlay.py  test_camera_worker.py  test_commands.py  test_cylinder_geometry.py  test_gesture_controller.py  test_gesture_diagnostics.py  test_gesture_swipe_robustness.py  test_importer.py  test_powerpoint_exporter.py  test_project_store.py  test_runtime_paths.py  test_stage_chrome.py  test_stage_interactions.py  test_theme.py  visual_stage_smoke.py
widgets/: __init__.py  camera_overlay.py  cylinder_carousel.py  cylinder_geometry.py  ppt_preview_workspace.py  slide_viewer.py  stage_chrome.py  stage_page_transition_overlay.py  stage_recomposition_overlay.py  stage_workspace.py  thumbnail_panel.py
(+10 files in other folders)
