[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wavedeck"
version = "0.1.0"
description = "Local-first Windows PowerPoint stage with 4K export, carousel navigation, and a gesture-ready architecture."
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.6,<7",
  "Pillow>=10.0",
  "numpy>=1.26,<2",
  "opencv-contrib-python==4.11.0.86",
  "mediapipe==0.10.21",
]

[project.optional-dependencies]
windows = ["pywin32>=306"]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["app*", "gesture*", "models*", "ppt*", "widgets*"]
